[package]
name = "ddnet-log-anonymizer"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
chrono = {version = "0.4.40", features = ["serde"]}
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.7"
indicatif = "0.17.11"
lazy_static = "1.5.0"
log = "0.4.26"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

